# qr-grabber

./: .gitignore  CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml  requirements.txt  version.py
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: generate-hash.yaml  github-ci.yaml  lint.yaml  release.yaml
hooks/: hook-pyzbar.py
src/config/: logging_config.py
src/services/: clipboard_service.py  notification_service.py  qr_processor.py  screenshot_service.py
src/ui/: snipping_tool.py  tray_icon.py
src/utils/: assets.py  exceptions.py  startup_manager.py
tests/: test_clipboard_service.py  test_notification_service.py  test_qr_processor.py  test_screenshot_service.py  test_snipping_tool.py
